--- a/index.html
+++ b/index.html
@@ -46,35 +46,35 @@
 
     <section id="forecast">
         <h4>5-Day Forecast:</h4>
-        <div id="day-1">
+        <div id="day-1" class="days">
             <h5><span id="date1"></span></h5>
             <image id="date1-icon"></image>
             <p>Temp: <span id="day1-temp"></span> °F</p> 
             <p>Wind: <span id="day1-wind"></span> MPH</p>
             <p>Humidity: <span id="day1-humid"></span> %</p>
         </div>
-        <div id="day-2">
+        <div id="day-2" class="days">
             <h5><span id="date2"></span></h5>
             <image id="date2-icon"></image>
             <p>Temp: <span id="day2-temp"></span> °F</p>
             <p>Wind: <span id="day2-wind"></span> MPH</p>
             <p>Humidity: <span id="day2-humid"></span> %</p>
         </div>
-        <div id="day-3">
+        <div id="day-3" class="days">
             <h5><span id="date3"></span></h5>
             <image id="date3-icon"></image>
             <p>Temp: <span id="day3-temp"></span> °F</p>
             <p>Wind: <span id="day3-wind"></span> MPH</p>
             <p>Humidity: <span id="day3-humid"></span> %</p>
         </div>
-        <div id="day-4">
+        <div id="day-4" class="days">
             <h5><span id="date4"></span></h5>
             <image id="date4-icon"></image>
             <p>Temp: <span id="day4-temp"></span> °F</p>
             <p>Wind: <span id="day4-wind"></span> MPH</p>
             <p>Humidity: <span id="day4-humid"></span> %</p>
         </div>
-        <div id="day-5">
+        <div id="day-5" class="days">
             <h5><span id="date5"></span></h5>
             <image id="date5-icon"></image>
             <p>Temp: <span id="day5-temp"></span> °F</p>
