Changed forecast id into a class

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </section>
 
-    <section id="forecast">
+    <section class="forecast">
         <h4>5-Day Forecast:</h4>
         <div id="day-1" class="days">
             <h5><span id="date1"></span></h5>
